# openterms-py

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
openterms/: __init__.py  cache.py  client.py  models.py
tests/: test_client.py
