[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openterms-py"
version = "0.3.0"
description = "Python SDK for the OpenTerms Protocol — query machine-readable AI agent permissions."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "OpenTerms", email = "hello@openterms.com" }]
keywords = ["openTerms", "ai", "agents", "permissions", "llm", "langchain", "crewai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
async = ["httpx>=0.24"]
dev = [
    "pytest>=7",
    "pytest-cov",
    "responses>=0.23",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://openterms.com"
Documentation = "https://openterms.com/docs"
Repository = "https://github.com/jstibal/openterms-py"
"Bug Tracker" = "https://github.com/jstibal/openterms-py/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["openterms*"]

[tool.setuptools.package-data]
openterms = ["py.typed"]

[tool.mypy]
strict = true
python_version = "3.9"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
